Fixed css alignment.

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ body {
 }
 
 .third-width{
-    width: 450px;
+    width: 400px;
     float:left;
 }
 
